<resources>
    <string name="app_name">Trivia</string>
    <string name="title_text">Trivia</string>
    <string name="out_of_text">Question: #%d of %d</string>
    <string name="score_text">%d/%d</string>
    <string name="option_a_text">A</string>
    <string name="option_b_text">B</string>
    <string name="option_c_text">C</string>
    <string name="option_d_text">D</string>
    <string name="previous_button_text">Prev</string>
    <string name="next_button_text">Next</string>
    <string name="correct_answer">Correct!</string>
    <string name="incorrect_answer">Incorrect</string>
    <string name="reset_button_text">Reset</string>
</resources>